[package]
name = "pixprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = "1.0.8"
anyhow = "1.0.75"
clap = { version = "4.4.13", features = ["cargo", "derive"] }
hanbun = "0.4.1"
image = "0.25.2"
